have the new release listed in the right place, even if no changes were made in
that repo.

Template for new versions:

## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

]]]

# Future

## New Tools
- `embark-anyone`: allows you to embark as any civilisation, including dead, and non-dwarven ones

## New Features
- `caravan`: DFHack dialogs for trade screens (both ``Bring goods to depot`` and the ``Trade`` barter screen) can now filter by item origins (foreign vs. fort-made) and can filter bins by whether they have a mix of ethically acceptable and unacceptable items in them
- `caravan`: If you have managed to select an item that is ethically unacceptable to the merchant, an "Ethics warning" badge will now appear next to the "Trade" button. Clicking on the badge will show you which items that you have selected are problematic. The dialog has a button that you can click to deselect the problematic items in the trade list.
- `confirm`: If you have ethically unacceptable items selected for trade, the "Are you sure you want to trade" confirmation will warn you about them

## Fixes
- `timestream`: ensure child growth events (e.g. becoming an adult) are not skipped over

## Misc Improvements
- `gui/sitemap`: show whether a unit is friendly, hostile, or wildlife
- `gui/sitemap`: show whether a unit is caged

## Removed

# 50.13-r4

## New Features
- `gui/journal`: new automatic table of contents. add lines that start with "# ", like "# Entry for 502-04-02", to add hyperlinked headers to the table of contents

## Fixes
- `full-heal`: fix ``-r --all_citizens`` option combination not resurrecting citizens
- `open-legends`: don't intercept text bound for vanilla legends mode search widgets
- `gui/unit-info-viewer`: correctly display skill levels when rust is involved
- `timestream`: fix dwarves spending too long eating and drinking
- `timestream`: fix jobs not being created at a sufficient rate, leading to dwarves standing around doing nothing