@@ -198,8 +198,18 @@ function Pregnancy:init()
             key_back='CUSTOM_SHIFT_Z',
             key='CUSTOM_Z',
             options={
-                {label='Default', value='default'},
-                0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10,
+                {label='Default', value='default', pen=COLOR_BROWN},
+                {label='0', value=0, pen=COLOR_BROWN},
+                {label='1', value=1, pen=COLOR_BROWN},
+                {label='2', value=2, pen=COLOR_BROWN},
+                {label='3', value=3, pen=COLOR_BROWN},
+                {label='4', value=4, pen=COLOR_BROWN},
+                {label='5', value=5, pen=COLOR_BROWN},
+                {label='6', value=6, pen=COLOR_BROWN},
+                {label='7', value=7, pen=COLOR_BROWN},
+                {label='8', value=8, pen=COLOR_BROWN},
+                {label='9', value=9, pen=COLOR_BROWN},
+                {label='10', value=10, pen=COLOR_BROWN},
             },
             initial_option='default',
         },
