@@ -28,6 +28,7 @@ Template for new versions:
 
 ## New Tools
 - `embark-anyone`: allows you to embark as any civilisation, including dead, and non-dwarven ones
+- `gui/pregnancy`: view and generate pregnancies with specified parents
 
 ## New Features
 - `caravan`: DFHack dialogs for trade screens (both ``Bring goods to depot`` and the ``Trade`` barter screen) can now filter by item origins (foreign vs. fort-made) and can filter bins by whether they have a mix of ethically acceptable and unacceptable items in them
